test/files/neg/t8450.check
t8450.scala:7: warning: implicit numeric widening
  def elapsed: Foo = (System.nanoTime.toInt - 100).foo
                                            ^
1 warning
error: No warnings can be incurred under -Werror.
